<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ProfileActivity">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="300dp"
                app:srcCompat="@drawable/dems11"
                android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"/>
        <TextView
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="24sp" android:textAlignment="center"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/view" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:background="@android:color/black"
                android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView3" style="@style/profiletextviewstyle"/>
        <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/profiletextviewstyle"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/profiletextviewstyle"
                android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"/>
        <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/profiletextviewstyle"
                android:id="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintBottom_toTopOf="@+id/textView6"/>
        <TextView
                android:text="@string/stack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/profiletextviewstyle"
                android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:text="@string/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                style="@style/profiletextviewstyle"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/textView2"/>
        <TextView
                android:text="@string/kenya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                style="@style/profiletextviewstyle"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/textView3"/>
        <TextView
                android:text="@string/myemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                style="@style/profiletextviewstyle"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/textView4"
        />
        <TextView
                android:text="@string/myPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                style="@style/profiletextviewstyle"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/textView5"/>
        <TextView
                android:text="@string/mySlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                style="@style/profiletextviewstyle"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/textView6"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
