<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true" android:clipToPadding="true">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:id="@+id/welcomeTv" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAlignment="center" app:layout_constraintBottom_toTopOf="@+id/btnAbout"
            android:layout_marginBottom="60dp" android:fontFamily="@font/montserrat_alternates_bold"
            android:textColor="@color/design_default_color_on_secondary"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/btnAboutAlc"
            style="@style/btnStyle"
            android:id="@+id/btnAbout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintBottom_toTopOf="@+id/btnProfile" android:layout_marginBottom="64dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTv"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/btnMyProfile"
            android:id="@+id/btnProfile" app:layout_constraintStart_toStartOf="@+id/btnAbout"
            app:layout_constraintEnd_toEndOf="@+id/btnAbout"
            app:layout_constraintTop_toBottomOf="@+id/btnAbout" style="@style/btnStyle"
            android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
